--- a/windows/PhotobookUI/MainPage.xaml
+++ b/windows/PhotobookUI/MainPage.xaml
@@ -3,39 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PhotobookUI.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
+    <ScrollView BackgroundColor="#001C13">
+        <HorizontalStackLayout
             Spacing="25"
             Padding="30,0"
+            HorizontalOptions="Center"
             VerticalOptions="Center">
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
-
-            <Label
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
-
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
-
             <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
-
-        </VerticalStackLayout>
+                x:Name="NewProjectButton"
+                Text="+"
+                SemanticProperties.Hint="New Project"
+                Clicked="OnNewProjectClicked"
+                HorizontalOptions="Center"
+                TextColor="#FFFFFF"
+                BackgroundColor="#004C35"
+                HeightRequest="120"
+                WidthRequest="120"
+                FontSize="Large">
+            </Button>
+        </HorizontalStackLayout>
     </ScrollView>
 
 </ContentPage>
