feat: Add toolkit package, hide menu bar.

--- a/windows/PhotobookUI/AppShell.xaml
+++ b/windows/PhotobookUI/AppShell.xaml
@@ -7,8 +7,9 @@
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
+        Title=""
         ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Route="MainPage"
+        NavigationPage.HasNavigationBar="False"/>
 
 </Shell>
