--- a/windows/PhotobookUI/MainPage.xaml
+++ b/windows/PhotobookUI/MainPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="PhotobookUI.MainPage">
 
     <ScrollView BackgroundColor="#001C13">
@@ -9,7 +10,6 @@
             Padding="30,0"
             HorizontalOptions="Center"
             VerticalOptions="Center">
-
             <Button
                 x:Name="NewProjectButton"
                 Text="+"
