--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -3,10 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PhotobookUI.TableContentPage"
              Title="TableContentPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <HorizontalStackLayout>
+    <VerticalStackLayout >
+        <Button
+                    x:Name="BackButton"
+                    Text="Backxyz"
+                    SemanticProperties.Hint="Back"
+                    Clicked="OnBackClicked"
+                    CornerRadius="0"
+                    VerticalOptions="Center"
+                    HorizontalOptions="Center"/>
+
     </VerticalStackLayout>
+    </HorizontalStackLayout>
 </ContentPage>
