ui: Add navigation between the main page and the table page.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -6,13 +6,13 @@
     <HorizontalStackLayout>
     <VerticalStackLayout >
         <Button
-                    x:Name="BackButton"
-                    Text="Backxyz"
-                    SemanticProperties.Hint="Back"
-                    Clicked="OnBackClicked"
-                    CornerRadius="0"
-                    VerticalOptions="Center"
-                    HorizontalOptions="Center"/>
+            x:Name="BackButton"
+            Text="Back"
+            SemanticProperties.Hint="Back"
+            Clicked="OnBackClicked"
+            CornerRadius="0"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"/>
 
     </VerticalStackLayout>
     </HorizontalStackLayout>
