--- a/windows/PhotobookUI/MainWindow.xaml
+++ b/windows/PhotobookUI/MainWindow.xaml
@@ -9,6 +9,6 @@
     mc:Ignorable="d">
 
     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="addProjectClick">Click Me</Button>
+        <Button x:Name="addProjectButton" Click="addProjectClick">Click Me</Button>
     </StackPanel>
 </Window>
