--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -59,23 +59,38 @@
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="5*"/>
             </Grid.ColumnDefinitions>
+            <Grid>
+                <ListView Name="MediaListView">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid VerticalAlignment="Center">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1*" />
+                                    <ColumnDefinition Width="4*" />
+                                </Grid.ColumnDefinitions>
+                                <Image Grid.Column="0" x:Name="folderImage" Source="Assets/folderIcon.png" Width="64" Height="64" HorizontalAlignment="Left"/>
+                                <TextBlock Grid.Column="1" Text="{Binding}" Foreground="#FFFFFF" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
 
-            <Border
-                BorderBrush="#004C35"
-                BorderThickness="1"
-                Padding="16,8"
-                Grid.Row="0"
-                Grid.Column="0">
-                <Button
-                    Background="#004C35"
-                    Click="onAddMediaButtonClicked"
-                    CornerRadius="4"
-                    Content="Add Media"
-                    x:Name="AddMediaButton"
-                    Foreground="#FFFFFF"
-                    HorizontalAlignment="Center"/>
-
-            </Border>
+                <Border
+                    BorderBrush="#004C35"
+                    BorderThickness="1"
+                    Padding="16,8"
+                    Grid.Row="0"
+                    Grid.Column="0">
+                    <Button
+                        Background="#004C35"
+                        Click="onAddMediaButtonClicked"
+                        CornerRadius="4"
+                        Content="Add Media"
+                        x:Name="AddMediaButton"
+                        Foreground="#FFFFFF"
+                        HorizontalAlignment="Center"/>
+                </Border>
+            </Grid>
 
             <Border
                 BorderBrush="#004C35"
