--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -13,6 +13,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="5*" />
             <RowDefinition Height="3*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -127,5 +128,12 @@
             </Border>
 
         </Grid>
+        <TextBlock
+            Grid.Row="3"
+            Grid.Column="0"
+            x:Name="StatusLabelText"
+            Foreground="#FFFFFF"
+            Text="Status: Idle"
+            HorizontalAlignment="Left"/>
     </Grid>
 </Page>
