feat: Allow only single selection for the folder list.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -62,7 +62,8 @@
             </Grid.ColumnDefinitions>
             <Grid>
                 <ListView Name="MediaListView"
-                          SelectionChanged="onFoldersSelectionChanged">
+                          SelectionChanged="onFoldersSelectionChanged"
+                          SelectionMode="Single">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <Grid VerticalAlignment="Center">
