--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -70,10 +70,17 @@
                             <Grid VerticalAlignment="Center">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="1*" />
+                                    <ColumnDefinition Width="1*" />
                                     <ColumnDefinition Width="4*" />
                                 </Grid.ColumnDefinitions>
-                                <Image Grid.Column="0" x:Name="folderImage" Source="Assets/folderIcon.png" Width="64" Height="64" HorizontalAlignment="Left"/>
-                                <TextBlock Grid.Column="1" Text="{Binding}" Foreground="#FFFFFF" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                <Button
+                                    Grid.Column="0"
+                                    Background="#004C35"
+                                    Content="+"
+                                    x:Name="AddToTable"
+                                    Foreground="#FFFFFF"/>
+                                <Image Grid.Column="1" x:Name="folderImage" Source="Assets/folderIcon.png" Width="64" Height="64" HorizontalAlignment="Left"/>
+                                <TextBlock Grid.Column="2" Text="{Binding}" Foreground="#FFFFFF" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
