dev: Add canvas size.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -125,7 +125,12 @@
                         Grid.Row="0"
                         Grid.Column="0"
                         Grid.ColumnSpan="2">
-                        <canvas:CanvasControl Draw="CanvasControlDraw" x:Name="GalleryCanvas" ClearColor="#004400"/>
+                        <canvas:CanvasControl 
+                            Width="350"
+                            Height="248"
+                            Draw="CanvasControlDraw"
+                            x:Name="GalleryCanvas"
+                            ClearColor="#004400"/>
                     </Grid>
 
                     <TextBlock
