dev: Add content dialog name.

--- a/windows/PhotobookUI/ExitProjectDialog.xaml
+++ b/windows/PhotobookUI/ExitProjectDialog.xaml
@@ -8,6 +8,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Title="TITLE"
+    x:Name="ProjectExitDialog"
     PrimaryButtonText="Save"
     SecondaryButtonText="Discard"
     CloseButtonText = "Cancel"
