dev: Remove code snipped taken from an example.

--- a/windows/PhotobookUI/TableContentPage.xaml
+++ b/windows/PhotobookUI/TableContentPage.xaml
@@ -209,7 +209,7 @@
             </Border>
 
             <ContentDialog
-                Title="TITLE"
+                Title="Save Project"
                 x:Name="ProjectExitDialog"
                 PrimaryButtonText="Save"
                 SecondaryButtonText="Discard"
@@ -217,12 +217,6 @@
                 PrimaryButtonClick="onContentDialogSaveClicked"
                 SecondaryButtonClick="onContentDialogDiscardClicked"
                 CloseButtonClick="onContentDialogCancelClicked">
-
-                <!-- Content of the ContentDialog -->
-                <StackPanel>
-                    <TextBlock Text="This is a simple ContentDialog in WinUI 3." Margin="0,0,0,10"/>
-                    <TextBox PlaceholderText="Enter something..."/>
-                </StackPanel>
             </ContentDialog>
 
         </Grid>
