dev: Add right click handler for projects list.

--- a/windows/PhotobookUI/FirstPage.xaml
+++ b/windows/PhotobookUI/FirstPage.xaml
@@ -36,6 +36,7 @@
                 Grid.Row="0"
                 Grid.Column="1"
                 Name="ProjectsListView"
+                RightTapped="OnListViewRightTapped"
                 SelectionMode="None">
                 <ListView.ItemTemplate>
                     <DataTemplate>
