--- a/windows/PhotobookUI/FirstPage.xaml
+++ b/windows/PhotobookUI/FirstPage.xaml
@@ -44,13 +44,26 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
+
                             <Button
                                 Grid.Column="0"
                                 Content="{Binding}"
                                 Background="#004C35"
                                 Foreground="#FFFFFF"
                                 Width="100"
-                                Height="100"/>
+                                Height="100">
+                                <Button.Flyout>
+                                    <MenuFlyout>
+                                        <MenuFlyoutItem x:Name="EditButton" Text="Edit"/>
+                                        <MenuFlyoutItem x:Name="DeleteButton" Text="Delete"/>
+                                        <MenuFlyoutSubItem Text="OtherItems">
+                                            <MenuFlyoutItem Text="Inside1"/>
+                                            <MenuFlyoutItem Text="Inside2"/>
+                                            <MenuFlyoutItem Text="Inside3"/>
+                                        </MenuFlyoutSubItem>
+                                    </MenuFlyout>
+                                </Button.Flyout>
+                            </Button>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
