--- a/windows/PhotobookUI/FirstPage.xaml
+++ b/windows/PhotobookUI/FirstPage.xaml
@@ -39,7 +39,7 @@
                 RightTapped="OnListViewRightTapped"
                 SelectionMode="None">
                 <ListView.ItemTemplate>
-                    <DataTemplate>
+                    <DataTemplate x:DataType="local:ProjectItem">
                         <Grid VerticalAlignment="Center">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
@@ -47,7 +47,7 @@
 
                             <Button
                                 Grid.Column="0"
-                                Content="{Binding}"
+                                Content="{x:Bind Name}"
                                 Background="#004C35"
                                 Foreground="#FFFFFF"
                                 Width="100"
